# vkbottle

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTION_GUIDE.md  LICENSE  Makefile  README.md  ci_test.sh  mkdocs-requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ---------------------------------------.md  ----------.md  ---.md  bug.md  bug.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: build.yml  ci.yml  dependabot-automerge.yml  lint-and-test.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  pull-request.yml  push-build.yml  push-lint-and-test.yml  pythonpublish.yml
docs/: FrameworkAPI.md  README.RU.md  RECOMMENDED.md  RulesExecutor.md  TODO.md  api.ru.md  archived_project_not_achived.md  branches.ru.md  framework.ru.md  getting_started.md  index.md  kriper2005.txt  migration.md  modules.md  readme.ru.md  rules.md  stuff.ru.md  task_manager.md  template.md  todo - rewrite docs  validators-docs.md  why-vkbottle.md  why_vkbottle.md
docs/_css/: style.css
docs/api/: api.md
docs/exception_factory/: exception-factory.md
docs/features/: branches.md  rules.md  workers.md
docs/high-level/: bot.md  builtin-rules.md  builtin_rules.md  index.md  user.md
docs/http/: http-client.md  http-middleware.md
docs/low-level/: api.md  callback.md  http-client.md  index.md  low-level.md  polling.md
docs/special/: covid_statuses.md  quiz_statuses.md
docs/tools/: auth.md  event-data.md  formatting.md  index.md  keyboard.md  loop-wrapper.md  message-event.md  storage.md  template.md  uploaders.md  vkscript.md  waiter-machine.md
docs/tutorial/: callback-bot.md  code-separation.md  error-handling.md  faq.md  first-bot.md  index.md  keyboards-attachments.md  middlewares-return-managers.md  recommended-ide.md  recommended_ide.md  rules.md
docs/whats_new/: 4.0.md  4.1.md  4.2.md  4.3.md  index.md
examples/: README.rst  api_request_example.py  bot_decorators.py  callback_bot.py  callback_buttons.py  database_branch.py  error_handler_example.py  exception_manager.py  filters.py  http.py  http_example.py  longpoll_bot.py  middleware.py  proxy.py  raid.py  shuffle_tokens.py  simple_bot.py  simple_chat_manager.py  storage.py  tortoise_models.py  uploaders.py  user_longpoll.py  users.db-shm  users.db-wal  vkscript.py
examples/bottle_examples/: apiwrapper.py  customvalidator.py  myage.py  myname.py  presidentvalidatorwitharg.py
examples/experimental/: funnel.py
examples/high-level/: blueprint.py  callback_buttons.py  easy_bot.py  filters_shortcuts.py  forward_message_example.py  generate_keyboard.py  generate_template.py  group_user_polling_example.py  group_user_pooling_example.py  labeler_setup.py  message_event.py  middleware_example.py  multibot.py  photo_upload_example.py  rules_shortcuts.py  state_dispenser.py  uploaders_example.py  waiter.py
examples/low-level/: api_request_example.py  ctx_storage_example.py  error_handler_example.py  exception_manager.py  http_example.py
examples/tests/: branches_new.py  branches_types.py  consignment.py  forwarder.py  middleware.py  ping.py  rule.py  shueppshbot.py  shuffle_tokens.py  stress.py  stress_devourer.py  templates.py  upload.py  uploader.py  user_lp.py
portable/: PORTABLE.json
tests/: api.py  api_test.py  bot_test.py  conftest.py  exception_manager_test.py  http_test.py  middlewares_test.py  test_aiohttp_client.py  test_api.py  test_bot.py  test_callback.py  test_dispenser.py  test_event_data.py  test_exception_factory.py  test_exception_handling.py  test_exception_manager.py  test_exceptions.py  test_foreign_message.py  test_http.py  test_labeler.py  test_middlewares.py  test_multibot.py  test_polling.py  test_polling_loop.py  test_rules.py  test_utils.py  test_views.py  tools_test.py  views_test.py  vkscript_converter_test.py
tests/fixtures/: client.py  middlewares.py
tests/tools/: test_formatting.py  test_magic.py  test_message_answer.py  test_tools.py  test_uploaders.py  test_user_message.py  test_vkscript_converter.py  test_vkscript_fixes.py  test_waiter_machine.py  test_waiter_storage_auth.py
vkbottle/: README.rst  __init__.py  bot.py  branch.py  const.py  donuts.py  exceptions.py  ext.py  jsontype.py  keyboard.py  methods.py  modules.py  notifications.py  portable.py  rule.py  user.py  validators.py
vkbottle/api/: __init__.py  abc.py  api.py  exceptions.py  fetch_method.py  template.py  token.py
vkbottle/auth/: __init__.py  _flows.py  scopes.py
vkbottle/bot/: README.txt  __init__.py  callback.py  keyboard.py  vkbottle.py  vkbottle2.py
vkbottle/callback/: __init__.py  abc.py  bot_callback.py
vkbottle/collects/: color.py
vkbottle/dispatch/: __init__.py  abc.py  base.py  bot_router.py  user_router.py
vkbottle/exception_factory/: __init__.py  abc.py  base_exceptions.py  code_error.py  code_exception.py  code_exception.pyi  reducible_kwargs_exception.py  single_error.py
vkbottle/framework/: __init__.py  _event.py  _status.py  abc.py  abc_blueprint.py  base.py  bot.py  mailing.py  polling.py  processor.py  status.py  user.py
vkbottle/handler/: __init__.py  error.py  events.py  handler.py  regex.py  user.py
vkbottle/http/: __init__.py  abc.py  aiohttp.py  aiohttp_types.py  app.py  proxy.py  request.py
vkbottle/polling/: __init__.py  abc.py  base.py  bot_polling.py  user_polling.py
vkbottle/tests/: conftest.py  test_api.py  test_bot.py  test_event_data.py  test_exception_handling.py  test_exception_manager.py  test_http.py  test_middlewares.py  test_tools.py  test_views.py
vkbottle/tools/: __init__.py  _runner.py  auth.py  ctx_tool.py  delayed_task.py  event_data.py  formatting.py  limited_dict.py  loop_wrapper.py  magic.py  markdown_parser.py  scheduling.py  singleton.py  test_utils.py  utils.py  validator.py
vkbottle/types/: __init__.py  application.py  appwidget.py  base.py  chat.py  client_info.py  community.py  (+8 more)
vkbottle2/: __init__.py  const.py
(+633 files in other folders)
